[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/OQ_Toolkit/OQ_ARVRController/scripts/Feature_ToolGrab.gd" type="Script" id=1]


[sub_resource type="SphereShape" id=1]
radius = 0.1

[sub_resource type="SphereShape" id=2]
radius = 0.05

[node name="Feature_ToolGrab" type="Spatial"]
script = ExtResource( 1 )

[node name="GrabArea" type="Area" parent="."]

[node name="GrabAreaShape" type="CollisionShape" parent="GrabArea"]
shape = SubResource( 1 )

[node name="CollisionKinematicBody" type="KinematicBody" parent="."]

[node name="CollisionBodyShape" type="CollisionShape" parent="CollisionKinematicBody"]
shape = SubResource( 2 )
disabled = true

[node name="ToolPlaceholderKinematicBody" type="KinematicBody" parent="."]
